syntax = "proto3";

option csharp_namespace = "Sting.Core.Communication";

package Configurator;

service Configurator{
	rpc ConfigureSystem (SystemConfiguration) returns (ConfigurationReply);
}

message SystemConfiguration{
	ConfigMetadata metadata = 1;
	ControllerConfig controllerConfig = 2;
	DatabaseConfig databaseConfig = 3;
	repeated DeviceConfig deviceConfig = 4;
}

message ConfigMetadata{
	string version = 1;
}

message ControllerConfig{
	string name = 1;
	ControllerType controllerType = 2;
	ControllerRole controllerRole = 3;

}

message DatabaseConfig{
	string type = 1;
	DatabaseAttributesConfig attributes = 2;
}

message DatabaseAttributesConfig{
	string name = 1;
	string connectionString = 2;
}

message DeviceConfig{
	string name = 1;
	string Configuration = 2;
}

message ConfigurationReply{
	ConfigurationStatus status = 1;
	string statusMessage = 2;
}

enum ConfigurationStatus{
	UNKNOWN = 0;
	APPLIED = 1;
	ERROR = 2;
	REFUSED = 3;
}

enum ControllerType{
	RASPBERRY_PI = 0;
	OTHER = 1;
}

enum ControllerRole{
	COORDINATOR = 0;
	NODE = 1;
}